[package]
name = "clamclient"
version = "0.1.0"
edition = "2021"
description = "clamd client"
license = "MIT"
readme = "README.md"
authors = ["n01e0 <reoshiseki@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
thiserror = "1.0.37"

[lib]
name = "clamd_client"
path = "src/clamd.rs"

[[bin]]
name = "clamd-client"
path = "src/main.rs"
